objects/PO_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Link__c</fullName>
        <label>Item Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>PO Details</relationshipLabel>
        <relationshipName>PO_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Fresh Direct</fullName>
                </value>
                <value>
                    <fullName>Staples</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PO Detail</label>
    <nameField>
        <displayFormat>POD-{00000}</displayFormat>
        <label>PO Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>